openshift/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: agenticai-demo
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: agenticai-demo
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgresql
